--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,10 @@
-<!doctype html>  <html lang="en"> <head>   <meta charset="utf-8">    <title>HTML5 Sample</title>   <meta name="description" content="HTML5 Sample Page">   <meta name="author" content="yeshodhan.kulkarni">    <link rel="stylesheet" href="css/master.css?v=1.0">    <!--[if lt IE 9]>   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>   <![endif]--> </head>  <body>   <script src="js/scripts.js"></script> </body> </html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Hello World</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+  </body>
+</html>
