Updated web page.

--- a/index.htm
+++ b/index.htm
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Hello World</title>
+  <title>Mikey Hersh</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hello My Name is Mikey Hersh</h1>
   </body>
 </html>
