--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
   <title>Mikey Hersh</title>
   </head>
   <body>
-    <h1>Hello My Name is Mikey Hersh</h1>
+    <h1>Hello My Name is Mikey Hersh.</h1>
+    <h2>I love to read!</h2>
   </body>
 </html>
