--- a/index.htm
+++ b/index.htm
@@ -7,5 +7,8 @@
   <body>
     <h1>Hello My Name is Mikey Hersh.</h1>
     <h2>I love to read!</h2>
+    <p>
+      I like to watch tv and have my laptop
+    </p>
   </body>
 </html>
