--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="assets/css/index.css">
   <! — development version, includes helpful console warnings →
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
@@ -28,6 +29,9 @@
     <p>
       I like to watch tv and have my laptop
     </p>
+    <div id="app">
+    {{ message }}
+    </div>
   </div>
   <script src="assets/js/components.js"></script>
   <script src="assets/js/app.js"></script>
